--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -26,7 +26,7 @@
   justify-content: center;
   padding: 8px;
   border: 1px solid wheat;
-  background-color: blue;
+  background-color: rgb(22, 184, 196);
 }
 
 .percentage {
