--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -1,20 +1,14 @@
-.friendList {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 15px;
-  width: 300px;
-  margin-top: 30px;
-  margin-right: auto;
-  margin-left: auto;
+.status {
+  width: 10px;
+  height: 10px;
+  border: 1px solid fuchsia;
+  border-radius: 50%;
 }
 
-.item {
-  display: flex;
-  gap: 20px;
-  align-items: center;
-  justify-content: space-around;
-  width: 100%;
-  padding: 10px 40px;
-  background-color: bisque;
-  border-radius: 3%;
+.status.online {
+  background-color: green;
+}
+
+.status.ofline {
+  background-color: red;
 }
