--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -29,7 +29,6 @@
 .user {
   font-size: 16px;
   font-weight: 400;
-  color: rgb(162, 169, 169);
 }
 
 .user:nth-last-child(2) {
@@ -50,7 +49,7 @@
   width: 33%;
   padding: 8px;
   border: 1px solid #c2c6eb;
-  background-color: #b8c5ba;
+  background-color: rgb(22, 184, 196);
   font-size: 16px;
   font-weight: 500;
   color: rgb(6, 14, 14);
